--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,7 +28,7 @@ $grey-color-super-light: #eeeeee;
   "util/spacing",
   "util/media";
 
-@import "legacy", "flexbox";
+@import "legacy";
 
 @import
   "base",
