--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -433,22 +433,44 @@
 }
 
 .doc .note, .doc .warning, .doc .error {
-    padding: ($spacing-unit / 4) ($spacing-unit / 2) ($spacing-unit / 4) 40px;
+    padding: ($spacing-unit / 4) ($spacing-unit / 2) /*($spacing-unit / 4) 40px*/;
     margin: ($spacing-unit / 2) 0;
-    background-repeat: no-repeat;
-    background-position: 10px ($spacing-unit / 4);
+    /*background-repeat: no-repeat;
+    background-position: 10px ($spacing-unit / 4);*/
+    border-left: 4px solid $grey-color;
+    display: flex;
+    align-items: center;
 }
+.doc .note-icon {
+  width: 16 * $base-unit;
+  @include margin(right, 2);
+}
+.doc .note-content { flex: 1 1 auto; }
+
+@function svg-link($viewBox, $url, $id: '') {
+  $href: '';
+  @if $id == '' {
+    $href: $url;
+  } @else {
+    $href: '#{$url}%23#{$id}';
+  }
+  @return url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='#{$viewBox}'%3E%3Cuse href='#{$href}'%3E%3C/use%3E%3C/svg%3E");
+}
+
 .doc .note {
-    background-color: #DDEEFF;
-    background-image: url(../info.png);
+    background-color: $blue-color-light;
+    border-left-color: $blue-color;
+    .note-icon { color: $blue-color; }
 }
 .doc .warning { 
-    background-color: #FFFFDD;
-    background-image: url(../warning.png);
+  background-color: $yellow-color-light;
+  border-left-color: $yellow-color;
+  .note-icon { color: $yellow-color; }
 }
 .doc .error {
-    background-color: #FFDDEE;
-    background-image: url(../error.png);
+  background-color: $red-color-light;
+  border-left-color: $red-color;
+  .note-icon { color: $red-color; }
 }
 
 .doc .anchorjs-link {
