--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,7 @@ lunr_exclude: true
 
 
 // Typography (used in utils/typography)
-$base-font-family: Helvetica, Arial, Roboto, "Liberation Sans", sans-serif;
+$base-font-family: "Helvetica Neue", Helvetica, Arial, Roboto, "Liberation Sans", sans-serif;
 $monospace-font-family: "Menlo", "Consolas", "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono", "Liberation Mono", monospace;
 
 // Colours
