--- a/_includes/doctree.html
+++ b/_includes/doctree.html
@@ -22,6 +22,7 @@
 {% if include.title %}
   <{{ title_tag }} class="doc-title" {% if include.title_widget %}x-on:click="open = !open"{% endif %}>
     <span>{{ doctree.title }}</span>
+    {% if include.section_widget %}<!--div class="doc-title-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-expander"></use></svg></div-->{% endif %}
   </{{ title_tag }}>
 {% endif %}
 
@@ -39,12 +40,12 @@
         {%- endif -%}
       {%- endfor -%}
       <{{ section_tag }} class="doc-section" {% if include.section_widget %}x-data="{ open: {{section_current}} }" x-bind:class="{ 'doc-section-current': open }"{% endif %}>
-        {% comment %}Do expander here {% endcomment %}
         <{{ section_title_tag }} class="doc-section-title"
           {% if include.section_headings %}id="{{ section.title | replace:' ','-' | downcase }}"{% endif %}
           {% if include.section_widget %}x-on:click="open = !open"{% endif %}
         >
-          {{ section.title }}
+          {% if include.section_widget %}<div class="doc-section-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-expander"></use></svg></div>{% endif %}
+          <div class="doc-section-title-text">{{ section.title }}</div>
         </{{ section_title_tag }}>
 
         <ul>
