--- a/_sass/util/_typography.scss
+++ b/_sass/util/_typography.scss
@@ -10,8 +10,30 @@ $font-xlarge: 1.25rem;
 $font-xxlarge: 1.5rem;
 $font-3xlarge: 1.875rem;
 
+// Leading
+$lead-unit: 0.25rem;
+
+@mixin lead($value) {
+  @if $value == none {
+    line-height: 1;
+  } @else if $value == tight {
+    line-height: 1.25;
+  } @else if $value == snug {
+    line-height: 1.375;
+  } @else if $value == normal {
+    line-height: 1.5;
+  } @else if $value == relaxed {
+    line-height: 1.625;
+  } @else if $value == loose {
+    line-height: 2;
+  } @else {
+    line-height: $value * $lead-unit;
+  }
+}
+
 html {
   font-family: $base-font-family, $emoji-font-family;
+  @include lead(normal);
 }
 
 code, kbd, samp, pre {
