--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -426,18 +426,20 @@
 }
 
 .edit-docs {
-    font-size: $font-small;
-    margin: ($spacing-unit / 2) 0;
+  @include margin-y(8);
+  @include padding-y(8);
+  border-top: 1px solid $grey-color-light;
+  font-size: $font-small;
 
-    a, a:visited { 
-        color: $grey-color;
-        border-bottom: 1px dotted $grey-color;
-    }
-    a:hover {
-        color: $text-color;
-        text-decoration: none;
-        border-bottom: 1px solid $text-color;
-    }
+  a, a:visited { 
+    color: $grey-color;
+    border-bottom: 1px dotted $grey-color;
+  }
+  a:hover {
+    color: $text-color;
+    text-decoration: none;
+    border-bottom: 1px solid $text-color;
+  }
 }
 
 .search-app {
